[package]
name = "robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
device_query = "2.1.0"
dora-node-api = {version = "0.3.6", features = ["tracing"]}
dotenv = "0.15.0"
eyre = "0.6.12"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serial = "0.4.0"
thiserror = "1.0.63"
tokio = { version = "1.38.1", features = ["full"] }
